macos/openim_sdk_ffi_apple.h

typedef struct { const char *p; ptrdiff_t n; } _GoString_;
typedef struct {
    void (*onMethodChannel)(Dart_Port_DL port, char*, char*, char*, double*, char*);
	void (*onNativeMethodChannel)(char*, char*, char*, double*, char*);
} CGO_OpenIM_Listener;
typedef long long GoInt64;
typedef GoInt64 GoInt;
typedef _GoString_ GoString;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;
extern int GetLoginStatus(char* operationID);
extern char* GetLoginUserID();
extern void UpdateFcmToken(char* operationID, char* userIDList);
extern void SetAppBadge(char* operationID, int32_t appUnreadCount);
extern void GetUsersInfo(char* operationID, char* userIDList);
extern void GetUsersInfoFromSrv(char* operationID, char* userIDList);
extern void SetSelfInfo(char* operationID, char* userInfo);
extern void GetSelfUserInfo(char* operationID);
extern void UpdateMsgSenderInfo(char* operationID, char* nickname, char* faceURL);