lib/openim_sdk_ffi_bindings_generated.dart


  late final _GetLoginStatusPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'GetLoginStatus');
  late final _GetLoginStatus =
      _GetLoginStatusPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> GetLoginUserID() {
    return _GetLoginUserID();
  }

  late final _GetLoginUserIDPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'GetLoginUserID');
  late final _GetLoginUserID =
      _GetLoginUserIDPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  void UpdateFcmToken(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _UpdateFcmToken(
      operationID,
      userIDList,
    );
  }

  late final _UpdateFcmTokenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('UpdateFcmToken');
  late final _UpdateFcmToken = _UpdateFcmTokenPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SetAppBadge(
    ffi.Pointer<ffi.Char> operationID,
    int appUnreadCount,
  ) {
    return _SetAppBadge(
      operationID,
      appUnreadCount,
    );
  }

  late final _SetAppBadgePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int32)>>('SetAppBadge');
  late final _SetAppBadge =
      _SetAppBadgePtr.asFunction<void Function(ffi.Pointer<ffi.Char>, int)>();

  void GetUsersInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _GetUsersInfo(
      operationID,
      userIDList,
    );
  }

  late final _GetUsersInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('GetUsersInfo');
  late final _GetUsersInfo = _GetUsersInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetUsersInfoFromSrv(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _GetUsersInfoFromSrv(
      operationID,
      userIDList,
    );
  }

  late final _GetUsersInfoFromSrvPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetUsersInfoFromSrv');
  late final _GetUsersInfoFromSrv = _GetUsersInfoFromSrvPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SetSelfInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userInfo,
  ) {
    return _SetSelfInfo(
      operationID,
      userInfo,
    );
  }

  late final _SetSelfInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('SetSelfInfo');
  late final _SetSelfInfo = _SetSelfInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetSelfUserInfo(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetSelfUserInfo(
      operationID,
    );
  }

  late final _GetSelfUserInfoPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetSelfUserInfo');
  late final _GetSelfUserInfo =
      _GetSelfUserInfoPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void UpdateMsgSenderInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> nickname,
    ffi.Pointer<ffi.Char> faceURL,
  ) {
    return _UpdateMsgSenderInfo(
      operationID,
      nickname,
      faceURL,
    );
  }

  late final _UpdateMsgSenderInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('UpdateMsgSenderInfo');
  late final _UpdateMsgSenderInfo = _UpdateMsgSenderInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();
}

final class _GoString_ extends ffi.Struct {
  external ffi.Pointer<ffi.Char> p;

  @ptrdiff_t()
  external int n;
}

typedef ptrdiff_t = ffi.LongLong;

final class CGO_OpenIM_Listener extends ffi.Struct {
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(
              Dart_Port_DL,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>> onMethodChannel;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>> onNativeMethodChannel;
}

/// ============================================================================
/// IMPORTANT! Never update these signatures without properly updating
/// DART_API_DL_MAJOR_VERSION and DART_API_DL_MINOR_VERSION.
///
/// Verbatim copy of `dart_native_api.h` and `dart_api.h` symbol names and types
/// to trigger compile-time errors if the symbols in those files are updated
/// without updating these.
///
/// Function return and argument types, and typedefs are carbon copied. Structs
/// are typechecked nominally in C/C++, so they are not copied, instead a
/// comment is added to their definition.
typedef Dart_Port_DL = ffi.Int64;

final class GoInterface extends ffi.Struct {
  external ffi.Pointer<ffi.Void> t;

  external ffi.Pointer<ffi.Void> v;
}

final class GoSlice extends ffi.Struct {
  external ffi.Pointer<ffi.Void> data;

  @GoInt()
  external int len;

  @GoInt()
  external int cap;
}

typedef GoInt = GoInt64;
typedef GoInt64 = ffi.LongLong;
typedef GoString = _GoString_;
